added titles, need to finish metatags

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
 
   <div class="jumbotron">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <h2><%= title "Edit Profile" %></h2>
   </div>
 
 <div class="textMargin">
