--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Goal -%>
 <div class="jumbotron">
-  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => Goal %></h1>
+  <h1><%= title "Edit Goal" %></h1>
 </div>
 
 
