--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  	<title>Goalopedia</title>
+  	<head>
+  	<%= display_meta_tags :site => 'Goalopedia' %>
+	</head>
   	<%= favicon_link_tag 'favicon.ico' %>
   	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
