--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -1,7 +1,9 @@
+<div class="jumbotron">
+<h1><%= title "About Goalopedia" %></h1>
+</div>
+
 <div class="textMargin">
 
-<% provide(:title, 'About') %>
-<h1>Welcome to Goalopedia!</h1>
 <p>Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!</p>
 
 </div>
