--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,6 +1,12 @@
+<div class="jumbotron">
+  <h1><%= title "Contact Us" %></h1>
+
+
+</div>
+
 <div class="textMargin">
 
-<h1>Contact Form</h1>
+
 <p>Coming Soon</p>
 
 </div>
