--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Goal -%>
 <div class="jumbotron">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => Goal %></h1>
+  <h1><%= title "New Goal" %></h1>
 </div>
 <div class="textMargin">
 
