--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -296,7 +296,6 @@ text-decoration: inherit;
 
 .star {
   float: left;
-
 }
 
 .raty-cancel {
@@ -306,6 +305,7 @@ text-decoration: inherit;
 
 .avRating {
   float: left;
+  font-size: 17px;
 
 }
 
