--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -1,3 +1,6 @@
+<% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!",
+                 :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
+
 <div class="jumbotron">
 <h1><%= title "About Goalopedia" %></h1>
 </div>
@@ -5,5 +8,9 @@
 <div class="textMargin">
 
 <p>Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!</p>
+
+<p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
+
+<p>In the meantime, please sign up and help <%= link_to "help us find more goals", new_goal_path %>.</p>
 
 </div>
