--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -1,3 +1,6 @@
+<% set_meta_tags :description => "Welcome to Goalopedia! Please contact us to make our site better",
+                 :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
+
 <div class="jumbotron">
   <h1><%= title "Contact Us" %></h1>
 
@@ -7,6 +10,6 @@
 <div class="textMargin">
 
 
-<p>Coming Soon</p>
+<p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
 
 </div>
