--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,6 +182,16 @@ font-size: 2em;
   padding-bottom: 10px;
 }
 
+.jumbotron h1 a {
+  color: white;
+  text-decoration: none;
+}
+
+.jumbotron h1 a {
+  color: #DBFBFF;
+  text-decoration: none;
+}
+
 /*nav toggle*/
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
@@ -374,6 +384,15 @@ body {
 
 }
 
+/*goal edit*/
+
+.editGoal {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  margin-bottom: 30px;
+}
+
 /*Goal Show*/
 
 .page-header h1 {
@@ -381,6 +400,13 @@ body {
   text-align: center;
 
 }
+
+.showEdit {
+  float: right;
+
+
+}
+
 
 
 .showContent {
@@ -415,7 +441,7 @@ body {
 .list-group {
   margin-bottom: 20px;
   padding-left: 0;
-  width: 350px;
+  max-width: 350px;
   float: left
 
 }
