--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -5,11 +5,9 @@
 
 
 <% if @goal.gfy != blank? %>
-<div class="gfyShow">
-  <div class="vidOut">
+  <div class="editGoal">
   	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
   </div>
-</div>
 
 <% else %>
 
