--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -20,3 +20,7 @@
   </div>
 
 </div>
+
+
+<% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!",
+                 :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
