--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = Goal -%>
 
 <% set_meta_tags :description => "#{@goal.player} scores a goal for #{@goal.team.name} in the #{@goal.competition.name} against #{@goal.opponent.name}. Watch this goal at Goalopedia and find more great goals.",
-                 :keywords => "#{@goal.player}, #{@goal.team.name}, #{@goal.competition.name}, #{@goal.opponent.name}, #{@goal.date.to_s(:long)}, #{@goal.stadium}, #{@goal.scored_with}, #{@goal.assist}" %>
+                 :keywords => "#{@goal.player}, #{@goal.team.name}, #{@goal.competition.name}, #{@goal.opponent.name}, #{@goal.stadium}, #{@goal.scored_with}, #{@goal.assist}" %>
 
 <div class="jumbotron">
 
