new goals button on menu

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -188,8 +188,8 @@ font-size: 2em;
   text-decoration: none;
 }
 
-.jumbotron h1 a {
-  color: white;
+.jumbotron h1 a:hover {
+  color: #178F4B;
   text-decoration: none;
 }
 
