--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -17,6 +17,7 @@
     <ul class="nav navbar-nav navbar-left navBuffer">
       <% if defined?(Devise) %>
         <% if user_signed_in? %>
+          <li><%= link_to "Add Goals", new_goal_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
