--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   	<script type"text/javascript" src="http://test.gfycat.com/gfycat_test_may18.js"></script>
   	<%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-53883839-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 	<%= render partial: "elements/navbar" %>
