fix pagination width

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -364,8 +364,8 @@ body {
 
 .paginator {
   clear: both;
-  margin-top: 30px;
-  width: 500px;
+  margin-top: 50px;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
 }
