--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-53883839-1', 'auto');
+		ga('require', 'linkid', 'linkid.js');
 		ga('require', 'displayfeatures');
 		ga('send', 'pageview');
 
