--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -22,5 +22,5 @@
 </div>
 
 
-<% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape! Help us make Goalopedia the best resource for goals possible!",
-                 :keywords => "contact, goalopedia, goals, create, help, score, soccer, football" %>
+<% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape, help us make Goalopedia the best resource for goals possible!",
+                 :keywords => " goalopedia, goals, score, soccer, football, gfy, gif, football, premier, league, world, cup, " %>
