--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -15,3 +15,7 @@
 	</div>
 
 </div>
+
+
+<% set_meta_tags :description => "Welcome to Goalopedia! Our mission is to document every goal caught on tape, help us make Goalopedia the best resource for goals possible!",
+                 :keywords => " goalopedia, goals, score, soccer, football, gfy, gif, football, premier, league, world, cup, " %>
