--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,26 +1,20 @@
 <div class="jumbotron">
-<h1><%= title "Find Your Favorite Cups and Leagues" %></h1>
+<h1>Find Your Favorite Cups and Leagues</h1>
 </div>
 <div id="goals" class="masonry clearfix">
 
+	<%= render @competitions.order(:id).reverse_order %>
+	<div class="compBox box">
+		<h2><%= link_to "Can't Find it? Add Your Favorite League", new_user_registration_path %></h2>
+		<div class="gfySize">
+				<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
+		</div>
 
-<% @competitions.each do |a| %>
-	<% if a.goals.exists? %>
-		<div class="compBox box">
-	<% gfyid = a.goals.last.gfy.to_s.gsub("http://gfycat.com/", "") %>
-	
-	<h2>
-		<%= link_to a do %>
-			<%= a.name %> 
-		<% end %>
-	</h2>
-	<div class="gfySize">
-				<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= gfyid %>"></div>
 	</div>
-	
-</div>
-		
-	<% end %>
-<% end %>
 
 </div>
+
+
+<% title 'Cups and Leagues' %>
+<% description 'Check out the highlights for your favorite Leagues, Cups, and Tournaments, including every goal from the 2014 World Cup.' %>
+<% keywords 'World Cup, Premier League, La Liga, Cups, Leagues, Highlights, gifs, Gfycat, soccer, football, goals, goal' %>
