--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -30,7 +30,7 @@
 <% if @goal.gfy = true %>
 <div class="gfyShow">
   <div class="vidOut">
-  	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
+  	<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
   </div>
 
   <ul class="list-group">
