teams and comp pages

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
  
 	<div class="jumbotron">
-	<h1><%= title "#{@competition.name}" %></h1>
+	<h1><%= title "#{@team.name}" %></h1>
 	</div>
 
 
