nav bar and layout

--- a/app/views/statics/check.html.erb
+++ b/app/views/statics/check.html.erb
@@ -13,4 +13,15 @@
 <% end %>
 </ul>
 
+<ul>
+<% @goals.each do |a| %>
+
+<li><%= a.player %> <%= a.date.blank? %></li>
+
+<% end %>
+</ul>
+
+
+
+
 </div>
