--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -6,7 +6,7 @@
 
 
 	<div id="goals" class="masonry clearfix">
-		<%= render @goals.order(:id).reverse_order %>
+		<%= render @goals.order(:date).reverse_order %>
 	</div>
 
 	<div class="paginator">
