--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,21 +24,114 @@
 */
 
 .btn-info {
-background-color: #31B0D5;
-border-color: #269ABC;
+  background-color: RoyalBlue;
+
 }
 
 .btn-info:hover {
-  background-color: #1691B5;
+  background-color: MidnightBlue;
+}
+
+/*Nav Bar*/
+.navbar {
+  background-color: #42CA8A;
+}
+
+.search {
+  background: url("search.png") right no-repeat;
+  background-color: #FFF;
+  margin-top: 13px;
+  margin-bottom: 13px;
 
 }
 
+.btn-default.btn-info a {
+  color: white;
+  text-decoration: none;
+
+}
+
+.btn-default a {
+    color: black;
+  text-decoration: none;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #FFF;
+  font-size: 1.5em;
+  margin-top: 5px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+background-color: rgba(0, 0, 0, 0);
+}
+
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+color: #FFF;
+}
+
+.dropdown-menu > li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+  color: #FFF;
+  white-space: nowrap;
+}
+
+.dropdown-menu {
+  background-color: #42CA8A;
+
+}
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+text-decoration: none;
+background-color: #3CB57C;
+}
+
+
+.navBrand {
+padding: 5px;
+height: 60px;
+margin-left: 5px;
+}
+
+.navForm {
+width: 300px;
+float: left;
+margin-left: 8%;
+}
+
+.navbar-form.navbar-right {
+  margin-top: 13px;
+
+
+}
+
+.none {
+  display: none;
+
+}
 
 /*Competitions*/
 
 .compBox {
   background-color: #42CA8A;
-  color: white;
+    float: left;
+  margin: 5px;
+  padding: 5px;
+  color: #ffffff;
+  font-size: 11px;
+  line-height: 1.4em;
+  text-align: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+    text-align: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
 .compBox a {
@@ -80,108 +173,7 @@ border-color: #269ABC;
 
 /*Nav Bar*/
 
-.navbar-default {
-  background-color: #42CA8A;
-  border-color: transparent;
-}
 
-.navbar-default .navbar-nav > li > a {
-  color: #ffffff;
-}
-
-.navbar-default .navbar-brand {
-  color: #ffffff;
-}
-
-.navbar-form .form-control {
-  display: inline-block;
-  width: 240px;
-}
-
-.navBuffer {
-  margin-top: 5px;
-  margin-right: 415px;
-}
-
-
-.navBrand {
-  padding: 5px;
-  height: 70px;
-  left: 49%;
-  margin-left: -120px;
-  margin-top: 10px;
-  position: absolute;
-  top: -17px;
-}
-
-.navbar-collapse:before, .navbar-collapse:after {
-content: " ";
-display: inline;
-}
-
-.navbar-header:before, .navbar-header:after {
-content: " ";
-display: inline;
-}
-
-.navbar-toggle {
-  position: relative;
-  float: left;
-  margin-left: 15px;
-  padding: 9px 10px;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: none;
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 4px;
-  margin-bottom: 30px;
-  margin-right: 300px;
-}
-
-.logoCenter {
-  width: 300px;
-  display: inline;
-}
-
-.searchNav {
-  display: inline;
-
-}
-
-.navbar {
-  border-radius: 0px;
-  min-height: 60px;
-}
-
-.navbar-form {
-  overflow: auto;
-  border-top: none;
-  border-bottom: none;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
-  width: 375px;
-  margin-top: 13px;
-  margin-bottom: 13px;
-
-}
-.navbar-form p {
-  float: right;
-  margin: 0px;
-}
-
-.navbar-form.navbar-right:last-child {
-  margin-right: 0px;
-}
-
-.nav-center {
-    margin:0;
-    float:none;
-}
-
-.navbar-inner{
-    text-align:center;
-}
 
 /*Home*/
 .jumbotron h1, .jumbotron .h1 {
@@ -256,8 +248,7 @@ body {
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-size: 14px;
 line-height: 1.428571429;
-color: #333332;
-background-color: #DBFBFF;
+
 }
 
 
@@ -345,6 +336,7 @@ text-decoration: inherit;
 
 body {
   overflow-y: scroll;
+  background-color: #DBFBFF;
 }
 
 
@@ -352,14 +344,6 @@ body {
 .box {
   float: left;
   margin: 5px;
-  padding: 5px;
-  line-height: 1.4em;
-  float: left;
-  text-align: center;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-
 }
 
 .goal.box {
@@ -367,11 +351,15 @@ body {
   margin: 5px;
   padding: 5px;
   color: #ffffff;
-  background-color: $brand-primary;
+  background-color: #42CA8A;
   font-size: 11px;
   line-height: 1.4em;
   float: left;
   text-align: center;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+    text-align: center;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
