--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -1,58 +1,96 @@
 <nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
+  <div class="container-fluid">
     
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="navbar-collapse-1">
-    <ul class="nav navbar-nav">
-    </ul>
-    <ul class="nav navbar-nav navbar-left navBuffer">
-      <% if defined?(Devise) %>
-        <% if user_signed_in? %>
-          <li><%= link_to "Add Goals", new_goal_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-            </ul>
-          </li>
-        <% else %>
-          <li><%= link_to "Login", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% end %>
-      <% end %>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-
-    <%= link_to(image_tag("logoNBG.png", :class => "navBrand", :alt => "Goalopedia"), root_path) %>
-
-
-  <%= form_tag goals_path, method: :get, class: "navbar-form navbar-right" do %>
-    <p>
-      <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Players and Teams" %>
-      <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
-    </p>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to(image_tag("logoNBG.png", :class => "navBrand", :alt => "Goalopedia"), root_path) %>
+    </div>
+    <%= form_tag goals_path, method: :get, class: "navForm" do %>
+      <div class="">
+      <%= text_field_tag :query, params[:query], class: "form-control search", placeholder: "Search Players and Teams" %>
+      <%= submit_tag "search", name: nil, class: "none" %>
+      </div>
   <% end %>
 
+    <div class="navbar-collapse collapse" id="navbar-collapsible">
+      
+      
+      <% if defined?(Devise) %>
+        <% if user_signed_in? %>
+          <div class="navbar-form navbar-right">
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                  Account <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+                </ul>
+            </div>
+            <button type="button" class="btn btn-default btn-info"><%= link_to "Add Goals", new_goal_path %></button>
+          </div>
+        <% else %>
+          <div class="navbar-form navbar-right">
+            <button type="button" class="btn btn-default"><%= link_to "Login", new_user_session_path %></button>
+            <button type="button" class="btn btn-default btn-info"><%= link_to "Sign Up", new_user_registration_path %></button>
+          </div>
 
+        <% end %>
+      <% end %>
+
+      
+
+
+
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Arsenal", team_path(109) %></li>
+              <li><%= link_to "Chelsea", team_path(115) %></li>
+              <li><%= link_to "Liverpool", team_path(125) %></li>
+              <li><%= link_to "Manchester City", team_path(127) %></li>
+              <li><%= link_to "Manchester United", team_path(110) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "All Teams", teams_path %></li>
+            </ul>
+          </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">International<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Argentina", team_path(499) %></li>
+              <li><%= link_to "Brazil", team_path(518) %></li>
+              <li><%= link_to "Colombia", team_path(534) %></li>
+              <li><%= link_to "England", team_path(553) %></li>
+              <li><%= link_to "Germany", team_path(566) %></li>
+              <li><%= link_to "Netherlands", team_path(623) %></li>
+              <li><%= link_to "United States", team_path(691) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "All Teams", teams_path %></li>
+            </ul>
+          </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Leagues and Cup<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "World Cup", competition_path(16) %></li>
+              <li><%= link_to "Premier League", competition_path(8) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "All Leagues and Cups", competitions_path %></li>
+            </ul>
+          </li>
+      </ul>
+      
+      
+    </div>
+    
+  </div>
 </nav>
-
-
-
-
-
-
-
 
 
 
