--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -76,7 +76,7 @@
             </ul>
           </li>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Leagues and Cup<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Leagues and Cups<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "World Cup", competition_path(16) %></li>
               <li><%= link_to "Premier League", competition_path(8) %></li>
