--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -428,7 +428,11 @@ body {
 
 }
 
-
+.attribution {
+  font: 12px/17px "ProximaNovaRegular", Helvetica, Arial, sans-serif;
+color: #999;
+font-style: italic;
+}
 
 .showContent {
   margin-left: auto;
