--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -31,6 +31,7 @@
 <div class="gfyShow">
   <div class="vidOut">
   	<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
+    <a href="http://gfycat.com/" class="attribution">Via Gfycat.com</a>
   </div>
 
   <ul class="list-group">
@@ -44,11 +45,6 @@
     <% if @goal.date != nil %><li class="list-group-item"><strong>Date:</strong> <%= @goal.date.to_s(:long) %></li><% end %>
     <% if @goal.stadium != nil %><li class="list-group-item"><strong>Stadium:</strong> <%= @goal.stadium %></li><% end %>
     <% if @goal.scored_with %><li class="list-group-item"><strong>Scored With:</strong> <%= @goal.scored_with %></li><% end %>
-    <% if user_signed_in? != true %>
-    <li class="list-group-item active noRat"><strong class="avRating margTop">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %><%= link_to "Sign Up to Rate", new_user_registration_path, class: "btn btn-info btn-small" %></li>
-    <% else %>
-    <li class="list-group-item active ratingExtra"><strong class="avRating">Rating:</strong> <%= rating_for @goal, "quality", :noRatedMsg => true, :enable_half => true, :half_show => true, :disable_after_rate => false %></li>
-    <% end %>
     <% if user_signed_in? != false || @goal.scored_with.blank? != false || @goal.stadium.blank? != false || @goal.date.blank? != false || @goal.stage.blank? != false %>
 
       <div class="showRow showEdit topMarg">
