--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -7,12 +7,12 @@
   <%= f.association :competition, collection: Competition.order('name ASC') %>
   <%= f.input :stage, as: :select, collection: ['League Game', 'Group Stage', 'Round of 16', 'Quarterfinals', 'Semi Finals', '3rd Place Match', 'Final', 'Other'] %>
   <%= f.input :assist, hint: "If there is a registered assist on the goal, list it here, otherwise leave blank." %>
-  <%= f.input :date %>
+  <%= f.input :date, order: [:day, :month, :year], end_year: Date.today.year - 90, start_year: Date.today.year %>
   <%= f.input :minute, range: 1..130 %>
   <%= f.input :penalty, as: :radio_buttons, required: true %>
   <%= f.input :own_goal, as: :radio_buttons, required: true %>
   <%= f.input :free_kick, as: :radio_buttons, required: true %>
-  <%= f.input :home, as: :radio_buttons, label: "Location", collection: ['Home', 'Away/Other'], required: true %>
+  <%= f.input :home, as: :radio_buttons, label: "Home Team", required: true %>
   <%= f.input :scored_with, as: :select, collection: ['Right Foot', 'Left Foot', 'Header', 'Other'] %>
   <%= f.input :stadium, placeholder: "Anfield, Home Depot Center, Camp Nou, etc." %>
   <%= f.input :video, label: "Original Video", hint: raw("Please submit the link to the original video or gif with the goal if available."), placeholder: "youtube, dailymotion, etc." %>
