--- a/app/views/elements/_footer.html.erb
+++ b/app/views/elements/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    Goalopedia &#169; 2014
+    Goalopedia &#169; 2014 | All videos via <a href="http://gfycat.com/" class="">Gfycat.com</a> 
   </small>
   <nav>
     <ul>
