--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -53,12 +53,14 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Arsenal", team_path(109) %></li>
+              <li><%= link_to "Barcelona", team_path(423) %></li>
+              <li><%= link_to "Bayern Munich", team_path(242) %></li>
               <li><%= link_to "Chelsea", team_path(115) %></li>
               <li><%= link_to "Liverpool", team_path(125) %></li>
               <li><%= link_to "Manchester City", team_path(127) %></li>
               <li><%= link_to "Manchester United", team_path(110) %></li>
               <li class="divider"></li>
-              <li><%= link_to "All Teams", teams_path %></li>
+              <li><%= link_to "All Teams", club_teams_path %></li>
             </ul>
           </li>
         <li class="dropdown">
@@ -68,18 +70,24 @@
               <li><%= link_to "Brazil", team_path(518) %></li>
               <li><%= link_to "Colombia", team_path(534) %></li>
               <li><%= link_to "England", team_path(553) %></li>
+              <li><%= link_to "France", team_path(561) %></li>
               <li><%= link_to "Germany", team_path(566) %></li>
+              <li><%= link_to "Mexico", team_path(613) %></li>
               <li><%= link_to "Netherlands", team_path(623) %></li>
+              <li><%= link_to "Switzerland", team_path(672) %></li>
               <li><%= link_to "United States", team_path(691) %></li>
               <li class="divider"></li>
-              <li><%= link_to "All Teams", teams_path %></li>
+              <li><%= link_to "All Teams", national_teams_path %></li>
             </ul>
           </li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Leagues and Cups<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "World Cup", competition_path(16) %></li>
               <li><%= link_to "Premier League", competition_path(8) %></li>
+              <li><%= link_to "La Liga", competition_path(4) %></li>
+              <li><%= link_to "Bundesliga", competition_path(2) %></li>
+              <li><%= link_to "World Cup", competition_path(16) %></li>
+              
               <li class="divider"></li>
               <li><%= link_to "All Leagues and Cups", competitions_path %></li>
             </ul>
