--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -6,7 +6,7 @@
 
 <% if @goal.gfy != blank? %>
   <div class="editGoal">
-  	<div class="gfyitem" data-title=false data-autoplay=false data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
+  	<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="<%= @gfyid %>" %>"></div> 
   </div>
 
 <% else %>
