user association and profile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -438,6 +438,18 @@ body {
   float: left;
 }
 
+.attribution a {
+  font: 12px/17px "ProximaNovaRegular", Helvetica, Arial, sans-serif;
+  color: #999;
+  font-style: italic;
+  float: left;
+}
+
+.att {
+  margin-left: 3px;
+
+}
+
 .attDiv {
   margin-bottom: 40px;
   width: 100%
