--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -28,6 +28,7 @@
                   Account <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "User Progile", user_url(@user) %></li>
                   <li><%= link_to "Edit Account", edit_user_registration_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
