--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,15 +3,25 @@
 			<div class="jumbotron">
 				<h1>Hello <%= @user.username %>!</h1>
 			</div>
-			<%= link_to "Edit Account", edit_user_registration_path, :class => 'btn btn-info' %>
-			<%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'btn btn-danger' %>
         <% else %>
         	<div class="jumbotron">
-  				<h1>User Profile: <%= @user.username %>!</h1>
+  				<h1>User Profile: <%= @user.username %></h1>
 			</div>
-			<h2>Want to join Goalopedia?</h2>
-          <%= link_to "Sign Up", new_user_registration_path, :class => 'btn btn-success' %>
-          <%= link_to "Login", new_user_session_path, :class => 'btn btn-info' %>
-
         <% end %>
 <% end %>
+
+<div id="goals" class="masonry clearfix">
+		<%= render @goals.order(:created_at).reverse_order %>
+	</div>
+
+	<div class="paginator">
+  	<%= will_paginate @goals, renderer: BootstrapPagination::Rails %>
+	</div>
+
+
+
+
+
+
+
+
