--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -25,7 +25,7 @@
     <div class="attDiv">
       <div class="attribution">
 
-    <%= link_to "Posted by #{@goal.user.username}", user_url(@goal.user) %><a href="http://gfycat.com/" class="att"> via Gfycat.com</a>
+    <a href="http://gfycat.com/" class="att"> via Gfycat.com</a>
       </div>
 
 
