--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,8 @@
 
 
 
-
+<% title "#{@user.username}'s Profile" %>
+<% description "User profile of #{@user.username}, check out their favorite goals!" %>
+<% keywords 'World Cup, Premier League, La Liga, Cups, Leagues, Highlights, gifs, Gfycat, soccer, football, goals, goal, Liverpool, Barcelona, Real Madrid, Manchester United, Chelsea, Arsenal' %>
 
 
