home page sans nav

--- a/app/views/elements/_footer.html.erb
+++ b/app/views/elements/_footer.html.erb
@@ -1,12 +1,8 @@
-<footer class="footer">
-  <small>
-    Goalopedia &#169; 2014 | All videos via <a href="http://gfycat.com/" class="">Gfycat.com</a> 
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><%= link_to "DMCA", dmca_path %></li>
-    </ul>
-  </nav>
-</footer>
+<section id="footerbottom" class="bg-grey">
+    <div class="container">
+            <div class="row align-center copyright pad-bot20 pad-top20">
+          <div class="col-sm-6 align-left">Goalopedia &#169; 2014 | All videos via <a href="http://gfycat.com/" class="">Gfycat.com</a></div>
+                <div class="col-sm-6 align-right"><p><%= link_to "About", about_path %> | <%= link_to "Contact", contact_path %> | <%= link_to "DMCA", dmca_path %></p></div>
+      </div>
+        </div>
+        </section>
