--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   	<script type"text/javascript" src="http://test.gfycat.com/gfycat_test_may18.js"></script>
   	<%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link href='http://fonts.googleapis.com/css?family=Nunito:300,400,700' rel='stylesheet' type='text/css'>
+
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -26,12 +28,10 @@
 </head>
 <body>
 
-	<%= render partial: "elements/navbar" %>
-	<div class="container-fluid">
+ 		<%= render partial: "elements/navbar" %>
 		<%= bootstrap_flash %>
 		<%= yield %>
 		<%= render 'elements/footer' %>
-	</div>
 
 </body>
 </html>
